--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="skills__box">
               <ul>
                 <li class="skills__img">
-                  <img src="assetS/hard-skills/mongodb.png" alt="mongodb" />
+                  <img src="assets/hard-skills/mongodb.png" alt="mongodb" />
                 </li>
                 <li class="skills__name">MongoDB</li>
               </ul>
@@ -487,7 +487,7 @@
           </div>
 
           <div class="experience__box">
-            <img class="experience__img" src="/assets/proyectos/proyecto-libro_diario.PNG" alt="libro-diario" />
+            <img class="experience__img" src="./assets/proyectos/proyecto-libro_diario.PNG" alt="libro-diario" />
             <div class="experience__info">
               <h2 class="experience__title">
                 Simulación de Libro Diario
