--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <a href="https://www.instagram.com/maxi.montana01/"><img src="assets/redes/instagram.png" alt="instagram" /></a>
                 </li>
                 <li class="title__network__item">
-                  <a href=""><img src="assets/redes/cv.png" alt="cv"/></a>
+                  <a href="./assets/CV.pdf"><img src="assets/redes/cv.png" alt="cv"/></a>
                 </li>
               </ul>
             </div>
@@ -402,6 +402,7 @@
               </h2>
               <h3 class="experience__text">Mayo 2017 - presente</h3>
               <!-- <h3 class="experience__text">Tareas:</h3> -->
+              <p>CV.pd</p>
             </div>
           </div>
         </div>
@@ -465,23 +466,23 @@
           </div>
 
           <div class="experience__box">
-            <img class="experience__img" src="" alt="e-commerce" />
+            <img class="experience__img" src="./assets/proyectos/proyecto-ecommerce.PNG" alt="e-commerce" />
             <div class="experience__info">
               <h2 class="experience__title">E-Commerce</h2>
               <h3 class="experience__text">Proyecto del Programa Oracle ONE Alura</h3>
               <h3 class="experience__text">HTML - CSS - Javascript</h3>
               <div class="experience__description">
-                <!-- <span class="experience__repo"
-                  ><a href="#"><button class="experiencia__botao--repo" disabled>
+                <span class="experience__repo"
+                  ><a href="https://github.com/momr01/Oracle-ONE-Challenge-ECommerce-front"><button class="experiencia__botao--repo">
                     Repositorio
                   </button></a></span
                 >
                 <span class="experience__demo"
-                  ><a href="#"
-                    ><button class="experience__botao--demo" disabled>
+                  ><a href="https://wondrous-creponne-0249c8.netlify.app/"
+                    ><button class="experience__botao--demo">
                       Ver demo
                     </button></a
-                  ></span> -->
+                  ></span>
               </div>
             </div>
           </div>
