Modificando experiencia profesional y formacion academica

--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
               <h2 class="section__idiomas__box__info__title">Inglés</h2>
               <h3 class="section__idiomas__box__info__text">AMICANA - Certificación Oficial</h3>
               <h3 class="section__idiomas__box__info__text">Finalización: julio 2020</h3>
+              <h3 class="section__idiomas__box__info__text">Resolución 0103/16</h3>
+                <h3 class="section__idiomas__box__info__text">Título: “Usuario Intermedio Avanzado en el idioma Inglés”</h3>
             </div>
           </div>
         </div>
@@ -333,6 +335,13 @@
                 <li class="academic__courses__item__subtitle">
                   <p>2012 - 2017</p>
                 </li>
+                <li class="academic__courses__item__subtitle">
+                  <p>Título obtenido: “Licenciado en Administración”.</p>
+                  </li>
+                  <li class="academic__courses__item__subtitle">
+                  <p>Habilidades adquiridas: análisis organizacional, análisis del sector público,
+                    paquete office, entre otros. </p>
+                </li>
               </ul>
             </div>
           </div>
@@ -356,6 +365,9 @@
                 <li class="academic__courses__item__subtitle">
                   <p>Marzo 2022 - Presente</p>
                 </li>
+                <li class="academic__courses__item__subtitle">
+                  <p>Habilidades adquiridas= HTML5 - CSS3 - Javascript - Git - Trello - Figma</p>
+                </li>
               </ul>
             </div>
 
@@ -369,6 +381,9 @@
                 </li>
                 <li class="academic__courses__item__subtitle">
                   <p>Agosto 2020 - Julio 2021</p>
+                </li>
+                <li class="academic__courses__item__subtitle">
+                  <p>Habilidades adquiridas= React - NodeJS - MongoDB - SQL - Bootstrap - Java.</p>
                 </li>
               </ul>
             </div>
@@ -384,6 +399,9 @@
                 <li class="academic__courses__item__subtitle">
                   <p>Agosto 2020 - Julio 2021</p>
                 </li>
+                <li class="academic__courses__item__subtitle">
+                  <p>Habilidades adquiridas= React - NodeJS - MongoDB - SQL - Bootstrap - Java.</p>
+                </li>
               </ul>
             </div>
           </div>
@@ -394,15 +412,29 @@
       <section class="experience__profesional">
         <div class="experience__container">
           <h2 class="experience__section__title">Experiencia Profesional</h2>
-          <div class="experience__box__edemsa">
+          <!-- <div class="experience__box__edemsa">
             <img class="experience__img__edemsa" src="./assets/experiencia-laboral/edemsa.png" alt="EDEMSA" />
             <div class="experience__info">
               <h2 class="experience__title">
                 EDEMSA
               </h2>
               <h3 class="experience__text">Mayo 2017 - presente</h3>
-              <!-- <h3 class="experience__text">Tareas:</h3> -->
+              
               <p>CV.pd</p>
+            </div>
+          </div> -->
+          <div class="experience__box">
+            <img class="experience__img__edemsa" src="assets/experiencia-laboral/edemsa.png" alt="edemsa" />
+            <div class="experience__info">
+              <h2 class="experience__title">EDEMSA</h2>
+              <h3 class="experience__text">Empresa Distribuidora de Electricidad de Mendoza S.A. </h3>
+              <h3 class="experience__text">Mayo 2017 - presente</h3>
+              <h3 class="experience__text">Máximo puesto alcanzado: Analista Senior.</h3>
+              <h3 class="experience__text">Habilidades adquiridas: trabajo en equipo, resolución de problemas,
+                desempeño bajo presión, adaptación a cambios en la legislación nacional y
+                provincial, análisis y creación de consultas en lenguaje SQL, gestión, control y optimización de la totalidad
+                de un proceso, análisis de deficiencias y búsqueda de soluciones.
+                </h3>
             </div>
           </div>
         </div>
