--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <a href="https://www.instagram.com/maxi.montana01/"><img src="assets/redes/instagram.png" alt="instagram" /></a>
                 </li>
                 <li class="title__network__item">
-                  <a href="./assets/CV.pdf"><img src="assets/redes/cv.png" alt="cv"/></a>
+                  <a href="./assets/CV.pdf" target="_blank"><img src="assets/redes/cv.png" alt="cv"/></a>
                 </li>
               </ul>
             </div>
@@ -114,7 +114,7 @@
             Actualmente me encuentro estudiando la Tecnicatura Superior en Desarrollo de
             Software, en el Instituto Superior Santo Domingo.
           </p>
-          <img src="" alt="firma" />
+          <!-- <img src="" alt="firma" /> -->
         </div>
       </section>
 
@@ -317,6 +317,9 @@
                   <p>ISSD</p>
                 </li>
                 <li class="academic__courses__item__subtitle">
+                  <p>Resolución 0862/21</p>
+                </li>
+                <li class="academic__courses__item__subtitle">
                   <p>Agosto 2021 - Presente</p>
                 </li>
               </ul>
@@ -332,6 +335,10 @@
                 <li class="academic__courses__item__subtitle">
                   <p>UNCUYO - FCE</p>
                 </li>
+                <li class="academic__courses__item__subtitle">
+                  <p>Resolución 0588/04</p>
+                </li>
+                
                 <li class="academic__courses__item__subtitle">
                   <p>2012 - 2017</p>
                 </li>
@@ -368,6 +375,10 @@
                 <li class="academic__courses__item__subtitle">
                   <p>Habilidades adquiridas= HTML5 - CSS3 - Javascript - Git - Trello - Figma</p>
                 </li>
+                <li class="academic__courses__item__subtitle">
+                  <a href="https://app.aluracursos.com/emprega-one/profile/maxi-omr01" target="_blank">Ir al perfil de EmpleaONE</a>
+                </li>
+                
               </ul>
             </div>
 
@@ -547,7 +558,7 @@
             </div>
           </div>
 
-          <div class="experience__box">
+          <!-- <div class="experience__box">
             <img class="experience__img" src="" alt="inventario" />
             <div class="experience__info">
               <h2 class="experience__title">
@@ -555,7 +566,7 @@
               </h2>
               <h3 class="experience__text">Proyecto propio, pensado para gestionar el inventario de insumos</h3>
               <h3 class="experience__text">React - NodeJS - MongoDB</h3>
-              <div class="experience__description">
+              <div class="experience__description"> -->
                 <!-- <span class="experience__repo"
                   ><a
                     href=""
@@ -571,11 +582,11 @@
                     </button></a
                   ></span
                 > -->
-              </div>
+              <!-- </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="experience__box">
+          <!-- <div class="experience__box">
             <img class="experience__img" src="" alt="tareas"/>
             <div class="experience__info">
               <h2 class="experience__title">
@@ -583,7 +594,7 @@
               </h2>
               <h3 class="experience__text">Proyecto propio, simple app para administrar tareas</h3>
               <h3 class="experience__text">React - NodeJS - MongoDB</h3>
-              <div class="experience__description">
+              <div class="experience__description"> -->
                 <!-- <span class="experience__repo"
                   ><a
                     href=""
@@ -599,9 +610,9 @@
                     </button></a
                   ></span
                 > -->
-              </div>
+              <!-- </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
 
