Modificando enlaces a redes sociales y responsive design

--- a/index.html
+++ b/index.html
@@ -78,17 +78,21 @@
 
               <ul class="title__network">
                 <li class="title__network__item">
-                  <a href="https://github.com/momr01"
+                  <a href="https://github.com/momr01" target="_blank"
                     ><img src="assets/redes/github.png" alt="github" />
                   </a>
                 </li>
                 <li class="title__network__item">
-                  <a href="https://www.linkedin.com/in/maximilianomontana"
+                  <a
+                    href="https://www.linkedin.com/in/maximilianomontana"
+                    target="_blank"
                     ><img src="assets/redes/linkedin.png" alt="linkedin"
                   /></a>
                 </li>
                 <li class="title__network__item">
-                  <a href="https://www.instagram.com/maxi.montana01/"
+                  <a
+                    href="https://www.instagram.com/maxi.montana01/"
+                    target="_blank"
                     ><img src="assets/redes/instagram.png" alt="instagram"
                   /></a>
                 </li>
@@ -112,14 +116,15 @@
             Nacional de Cuyo, Provincia de Mendoza-República Argentina.
           </p>
           <p class="about__paragraph">
-            Gracias a mi curiosidad y al impulso de continuar estudiando, empecé a aprender poco a poco y
-            por mi cuenta diferentes conceptos relacionados con el gigante mundo de la informática.
+            Gracias a mi curiosidad y al impulso de continuar estudiando, empecé
+            a aprender poco a poco y por mi cuenta diferentes conceptos
+            relacionados con el gigante mundo de la informática.
           </p>
 
           <p class="about__paragraph">
-            En mi última experiencia laboral, me encontré de frente con
-            la programación y fue entonces cuando decidí formalizar mis conocimientos y
-            comenzar con esta nueva y desafiante carrera.
+            En mi última experiencia laboral, me encontré de frente con la
+            programación y fue entonces cuando decidí formalizar mis
+            conocimientos y comenzar con esta nueva y desafiante carrera.
           </p>
 
           <p class="about__paragraph">
@@ -248,10 +253,7 @@
             <div class="skills__box">
               <ul>
                 <li class="skills__img">
-                  <img
-                    src="assets/hard-skills/git.png"
-                    alt="git"
-                  />
+                  <img src="assets/hard-skills/git.png" alt="git" />
                 </li>
                 <li class="skills__name">Git</li>
               </ul>
@@ -380,7 +382,7 @@
         <div class="academic__container">
           <h2 class="academic__title">Formación académica oficial</h2>
           <div class="academic__courses">
-            <div class="academic__courses__box">
+            <div class="academic__courses__box__oficial">
               <ul class="academic__courses__list">
                 <li class="academic__courses__item__img">
                   <img src="assets/formacion/formacion-issd.jfif" alt="issd" />
@@ -399,7 +401,7 @@
                 </li>
               </ul>
             </div>
-            <div class="academic__courses__box">
+            <div class="academic__courses__box__oficial">
               <ul class="academic__courses__list">
                 <li class="academic__courses__item__img">
                   <img
@@ -440,7 +442,7 @@
         <div class="academic__container">
           <h2 class="academic__title">Cursos</h2>
           <div class="academic__courses">
-            <div class="academic__courses__box">
+            <div class="academic__courses__box__cursos">
               <ul class="academic__courses__list">
                 <li class="academic__courses__item__img">
                   <img
@@ -470,7 +472,7 @@
               </ul>
             </div>
 
-            <div class="academic__courses__box">
+            <div class="academic__courses__box__cursos">
               <ul class="academic__courses__list">
                 <li class="academic__courses__item__img">
                   <img
@@ -493,7 +495,7 @@
               </ul>
             </div>
 
-            <div class="academic__courses__box">
+            <div class="academic__courses__box__cursos">
               <ul class="academic__courses__list">
                 <li class="academic__courses__item__img">
                   <img
@@ -540,7 +542,7 @@
               src="assets/experiencia-laboral/edemsa.png"
               alt="edemsa"
             />
-            <div class="experience__info">
+            <div class="experience__info__edemsa">
               <h2 class="experience__title">EDEMSA</h2>
               <h3 class="experience__text">
                 Empresa Distribuidora de Electricidad de Mendoza S.A.
