Add the new project called MERN-STOCKTAKING and the new social media icon of whatsapp

--- a/index.html
+++ b/index.html
@@ -97,10 +97,16 @@
                   /></a>
                 </li>
                 <li class="title__network__item">
+                  <a href="https://api.whatsapp.com/send?phone=+5492613016290&text=Hola! Quiero ponerme en contacto. Gracias." target="_blank"
+                    ><img src="assets/redes/whatsapp.png" alt="whatsapp"
+                  /></a>
+                </li>
+                <li class="title__network__item">
                   <a href="./assets/CV_1.4.pdf" target="_blank"
                     ><img src="assets/redes/cv.png" alt="cv"
                   /></a>
                 </li>
+                
               </ul>
             </div>
           </div>
@@ -697,33 +703,39 @@
             </div>
           </div>
 
-          <!-- <div class="experience__box">
-            <img class="experience__img" src="" alt="inventario" />
+          <div class="experience__box">
+            <img
+              class="experience__img"
+              src="./assets/proyectos/proyecto-inventario.PNG"
+              alt="inventario"
+            />
             <div class="experience__info">
-              <h2 class="experience__title">
-                Sistema de Inventario
-              </h2>
-              <h3 class="experience__text">Proyecto propio, pensado para gestionar el inventario de insumos</h3>
-              <h3 class="experience__text">React - NodeJS - MongoDB</h3>
-              <div class="experience__description"> -->
-          <!-- <span class="experience__repo"
-                  ><a
-                    href=""
+              <h2 class="experience__title">Sistema de Inventario</h2>
+              <h3 class="experience__text">
+                Proyecto propio, pensado para administrar el inventario de
+                insumos de una pequeña / mediana empresa.
+              </h3>
+              <h3 class="experience__text">
+                MERN (MongoDB - Express - React - NodeJS)
+              </h3>
+              <div class="experience__description">
+                <span class="experience__repo"
+                  ><a href="https://github.com/momr01/mern-stocktaking"
                     ><button class="experiencia__botao--repo">
                       Repositorio
                     </button></a
                   ></span
                 >
                 <span class="experience__demo"
-                  ><a href=""
+                  ><a href="https://celadon-douhua-1c4fca.netlify.app/"
                     ><button class="experience__botao--demo">
                       Ver demo
                     </button></a
                   ></span
-                > -->
-          <!-- </div>
+                >
+              </div>
             </div>
-          </div> -->
+          </div>
 
           <!-- <div class="experience__box">
             <img class="experience__img" src="" alt="tareas"/>
@@ -814,6 +826,11 @@
                 Enviar mensaje
               </button>
             </form>
+            <li class="title__network__item">
+              <a href="https://api.whatsapp.com/send?phone=+5492613016290&text=Hola! Quiero ponerme en contacto. Gracias." target="_blank"
+                ><img src="assets/redes/whatsapp.png" alt="whatsapp"
+              /></a>
+            </li>
           </div>
         </div>
       </section>
