--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
                   /></a>
                 </li>
                 <li class="title__network__item">
-                  <a href="https://api.whatsapp.com/send?phone=+5492613016290&text=Hola! Quiero ponerme en contacto. Gracias." target="_blank"
+                  <a
+                    href="https://api.whatsapp.com/send?phone=+5492613016290&text=Hola! Quiero ponerme en contacto. Gracias."
+                    target="_blank"
                     ><img src="assets/redes/whatsapp.png" alt="whatsapp"
                   /></a>
                 </li>
@@ -106,7 +108,6 @@
                     ><img src="assets/redes/cv.png" alt="cv"
                   /></a>
                 </li>
-                
               </ul>
             </div>
           </div>
@@ -737,33 +738,32 @@
             </div>
           </div>
 
-          <!-- <div class="experience__box">
-            <img class="experience__img" src="" alt="tareas"/>
+          <div class="experience__box">
+            <img class="experience__img" src="./assets/proyectos/proyecto-tareas.PNG" alt="tareas" />
             <div class="experience__info">
-              <h2 class="experience__title">
-                App de Tareas
-              </h2>
-              <h3 class="experience__text">Proyecto propio, simple app para administrar tareas</h3>
-              <h3 class="experience__text">React - NodeJS - MongoDB</h3>
-              <div class="experience__description"> -->
-          <!-- <span class="experience__repo"
-                  ><a
-                    href=""
+              <h2 class="experience__title">App de Tareas</h2>
+              <h3 class="experience__text">
+                Proyecto propio, simple app para administrar las tareas diarias.
+              </h3>
+              <h3 class="experience__text">MERN (MongoDB - Express - React - NodeJS)</h3>
+              <div class="experience__description">
+                <span class="experience__repo"
+                  ><a href="https://github.com/momr01/mern-tasks"
                     ><button class="experiencia__botao--repo">
                       Repositorio
                     </button></a
                   ></span
                 >
                 <span class="experience__demo"
-                  ><a href=""
+                  ><a href="https://cozy-lokum-cfcbab.netlify.app/"
                     ><button class="experience__botao--demo">
                       Ver demo
                     </button></a
                   ></span
-                > -->
-          <!-- </div>
+                >
+              </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </section>
 
@@ -827,7 +827,9 @@
               </button>
             </form>
             <li class="title__network__item">
-              <a href="https://api.whatsapp.com/send?phone=+5492613016290&text=Hola! Quiero ponerme en contacto. Gracias." target="_blank"
+              <a
+                href="https://api.whatsapp.com/send?phone=+5492613016290&text=Hola! Quiero ponerme en contacto. Gracias."
+                target="_blank"
                 ><img src="assets/redes/whatsapp.png" alt="whatsapp"
               /></a>
             </li>
