Delete letter o from title

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/styles-grales.css" />
     <link rel="stylesheet" href="./css/media-queries.css" />
-    <title>Maximiliano Montaña - Portafolioooooo</title>
+    <title>Maximiliano Montaña - Portafolio</title>
   </head>
   <body>
     <!-- Sección del Menú  -->
