add json databases of hard-skills, redes-sociales, hobbies, cursos

--- a/index.html
+++ b/index.html
@@ -76,38 +76,7 @@
                 de Alura Latam, entre otros.
               </h3>
 
-              <ul class="title__network">
-                <li class="title__network__item">
-                  <a href="https://github.com/momr01" target="_blank"
-                    ><img src="assets/redes/github.png" alt="github" />
-                  </a>
-                </li>
-                <li class="title__network__item">
-                  <a
-                    href="https://www.linkedin.com/in/maximilianomontana"
-                    target="_blank"
-                    ><img src="assets/redes/linkedin.png" alt="linkedin"
-                  /></a>
-                </li>
-                <li class="title__network__item">
-                  <a
-                    href="https://www.instagram.com/maxi.montana01/"
-                    target="_blank"
-                    ><img src="assets/redes/instagram.png" alt="instagram"
-                  /></a>
-                </li>
-                <li class="title__network__item">
-                  <a
-                    href="https://api.whatsapp.com/send?phone=+5492613016290&text=Hola! Quiero ponerme en contacto. Gracias."
-                    target="_blank"
-                    ><img src="assets/redes/whatsapp.png" alt="whatsapp"
-                  /></a>
-                </li>
-                <li class="title__network__item">
-                  <a href="./assets/CV_1.4.pdf" target="_blank"
-                    ><img src="assets/redes/cv.png" alt="cv"
-                  /></a>
-                </li>
+              <ul class="title__network" id="title__network">
               </ul>
             </div>
           </div>
@@ -146,8 +115,8 @@
       <section class="hard__skills" id="skills">
         <div class="skills__container">
           <h3 class="skills__title">Hard Skills</h3>
-          <div class="skills__line">
-            <div class="skills__box">
+          <div class="skills__line" id="skills__line">
+            <!-- <div class="skills__box">
               <ul>
                 <li class="skills__img">
                   <img src="assets/hard-skills/html-5.png" alt="html5" />
@@ -264,7 +233,7 @@
                 </li>
                 <li class="skills__name">Git</li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
@@ -323,63 +292,7 @@
       <section class="hobbies" id="hobbies">
         <div class="hobbies__container">
           <h3 class="hobbies__title">Hobbies</h3>
-          <div class="hobbies__line">
-            <div class="hobbies__box">
-              <ul>
-                <li class="hobbies__img">
-                  <img src="assets/hobbies/run.png" alt="correr" />
-                </li>
-                <li class="hobbies__name">Correr</li>
-              </ul>
-            </div>
-
-            <div class="hobbies__box">
-              <ul>
-                <li class="hobbies__img">
-                  <img src="assets/hobbies/write.png" alt="escribir" />
-                </li>
-                <li class="hobbies__name">Escribir novelas / historias</li>
-              </ul>
-            </div>
-
-            <div class="hobbies__box">
-              <ul>
-                <li class="hobbies__img">
-                  <img src="assets/hobbies/read.png" alt="leer" />
-                </li>
-                <li class="hobbies__name">Leer</li>
-              </ul>
-            </div>
-
-            <div class="hobbies__box">
-              <ul>
-                <li class="hobbies__img">
-                  <img
-                    src="assets/hobbies/movies.png"
-                    alt="ver peliculas y series"
-                  />
-                </li>
-                <li class="hobbies__name">Ver películas / series</li>
-              </ul>
-            </div>
-
-            <div class="hobbies__box">
-              <ul>
-                <li class="hobbies__img">
-                  <img src="assets/hobbies/gym.png" alt="pesas" />
-                </li>
-                <li class="hobbies__name">Hacer pesas</li>
-              </ul>
-            </div>
-
-            <div class="hobbies__box">
-              <ul>
-                <li class="hobbies__img">
-                  <img src="assets/hobbies/music.png" alt="escuchar musica" />
-                </li>
-                <li class="hobbies__name">Escuchar música</li>
-              </ul>
-            </div>
+          <div class="hobbies__line" id="hobbies__line">
           </div>
         </div>
       </section>
@@ -396,82 +309,7 @@
       <section class="academic__cursos">
         <div class="academic__container">
           <h2 class="academic__title">Cursos</h2>
-          <div class="academic__courses">
-            <div class="academic__courses__box__cursos">
-              <ul class="academic__courses__list">
-                <li class="academic__courses__item__img">
-                  <img
-                    src="assets/formacion/formacion-oracle-one-alura.webp"
-                    alt="alura"
-                  />
-                </li>
-                <li class="academic__courses__item__title">
-                  <h4>Programa Oracle ONE Alura</h4>
-                </li>
-                <li class="academic__courses__item__subtitle">
-                  <p>Marzo 2022 - Presente</p>
-                </li>
-                <li class="academic__courses__item__subtitle">
-                  <p>
-                    Habilidades adquiridas= HTML5 - CSS3 - Javascript - Git -
-                    Trello - Figma
-                  </p>
-                </li>
-                <li class="academic__courses__item__subtitle">
-                  <a
-                    href="https://app.aluracursos.com/emprega-one/profile/maxi-omr01"
-                    target="_blank"
-                    >Ir al perfil de EmpleaONE</a
-                  >
-                </li>
-              </ul>
-            </div>
-
-            <div class="academic__courses__box__cursos">
-              <ul class="academic__courses__list">
-                <li class="academic__courses__item__img">
-                  <img
-                    src="./assets/formacion/formacion-udemy.png"
-                    alt="udemy"
-                  />
-                </li>
-                <li class="academic__courses__item__title">
-                  <h4>Udemy</h4>
-                </li>
-                <li class="academic__courses__item__subtitle">
-                  <p>Agosto 2020 - Julio 2021</p>
-                </li>
-                <li class="academic__courses__item__subtitle">
-                  <p>
-                    Habilidades adquiridas= React - NodeJS - MongoDB - SQL -
-                    Bootstrap - Java.
-                  </p>
-                </li>
-              </ul>
-            </div>
-
-            <div class="academic__courses__box__cursos">
-              <ul class="academic__courses__list">
-                <li class="academic__courses__item__img">
-                  <img
-                    src="./assets/formacion/formacion-cursemia.png"
-                    alt="Cursemia"
-                  />
-                </li>
-                <li class="academic__courses__item__title">
-                  <h4>Cursemia</h4>
-                </li>
-                <li class="academic__courses__item__subtitle">
-                  <p>Agosto 2020 - Julio 2021</p>
-                </li>
-                <li class="academic__courses__item__subtitle">
-                  <p>
-                    Habilidades adquiridas= React - NodeJS - MongoDB - SQL -
-                    Bootstrap - Java.
-                  </p>
-                </li>
-              </ul>
-            </div>
+          <div class="academic__courses" id="courses">
           </div>
         </div>
       </section>
@@ -511,196 +349,6 @@
       <section class="experience__proyectos" id="xp">
         <div class="experience__container" id="experience__container">
           <h2 class="experience__section__title">Proyectos</h2>
-          <!-- <div class="experience__box">
-            <img
-              class="experience__img"
-              src="assets/proyectos/proyecto-encriptador01.PNG"
-              alt="encriptador"
-            />
-            <div class="experience__info">
-              <h2 class="experience__title">Encriptador de texto</h2>
-              <h3 class="experience__text">
-                Proyecto del Programa Oracle ONE Alura
-              </h3>
-              <h3 class="experience__text">HTML - CSS - Javascript</h3>
-              <div class="experience__description">
-                <span class="experience__repo"
-                  ><a
-                    href="https://github.com/momr01/Oracle-ONE-Challenge-Encriptador"
-                    ><button class="experiencia__botao--repo">
-                      Repositorio
-                    </button></a
-                  ></span
-                >
-                <span class="experience__demo"
-                  ><a
-                    href="https://momr01.github.io/Oracle-ONE-Challenge-Encriptador/"
-                    ><button class="experience__botao--demo">
-                      Ver demo
-                    </button></a
-                  ></span
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="experience__box">
-            <img
-              class="experience__img"
-              src="assets/proyectos/proyecto-ahorcado.PNG"
-              alt="ahorcado"
-            />
-            <div class="experience__info">
-              <h2 class="experience__title">Juego del Ahorcado</h2>
-              <h3 class="experience__text">
-                Proyecto del Programa Oracle ONE Alura
-              </h3>
-              <h3 class="experience__text">HTML - CSS - Javascript</h3>
-              <div class="experience__description">
-                <span class="experience__repo"
-                  ><a
-                    href="https://github.com/momr01/Oracle-ONE-Challenge-JuegoAhorcado"
-                    ><button class="experiencia__botao--repo">
-                      Repositorio
-                    </button></a
-                  ></span
-                >
-                <span class="experience__demo"
-                  ><a
-                    href="https://momr01.github.io/Oracle-ONE-Challenge-JuegoAhorcado/index.html"
-                    ><button class="experience__botao--demo">
-                      Ver demo
-                    </button></a
-                  ></span
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="experience__box">
-            <img
-              class="experience__img"
-              src="./assets/proyectos/proyecto-ecommerce.PNG"
-              alt="e-commerce"
-            />
-            <div class="experience__info">
-              <h2 class="experience__title">E-Commerce</h2>
-              <h3 class="experience__text">
-                Proyecto del Programa Oracle ONE Alura
-              </h3>
-              <h3 class="experience__text">HTML - CSS - Javascript</h3>
-              <div class="experience__description">
-                <span class="experience__repo"
-                  ><a
-                    href="https://github.com/momr01/Oracle-ONE-Challenge-ECommerce-front"
-                    ><button class="experiencia__botao--repo">
-                      Repositorio
-                    </button></a
-                  ></span
-                >
-                <span class="experience__demo"
-                  ><a href="https://wondrous-creponne-0249c8.netlify.app/"
-                    ><button class="experience__botao--demo">
-                      Ver demo
-                    </button></a
-                  ></span
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="experience__box">
-            <img
-              class="experience__img"
-              src="./assets/proyectos/proyecto-libro_diario.PNG"
-              alt="libro-diario"
-            />
-            <div class="experience__info">
-              <h2 class="experience__title">Simulación de Libro Diario</h2>
-              <h3 class="experience__text">
-                Proyecto propio, pensado para llevar pequeñas finanzas
-              </h3>
-              <h3 class="experience__text">React - NodeJS - MongoDB</h3>
-              <div class="experience__description">
-                <span class="experience__repo"
-                  ><a
-                    href="https://github.com/momr01/mern-planilla-gastos-client"
-                    ><button class="experiencia__botao--repo">
-                      Repositorio
-                    </button></a
-                  ></span
-                >
-                <span class="experience__demo"
-                  ><a href="https://clinquant-lollipop-5a9d2f.netlify.app/"
-                    ><button class="experience__botao--demo">
-                      Ver demo
-                    </button></a
-                  ></span
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="experience__box">
-            <img
-              class="experience__img"
-              src="./assets/proyectos/proyecto-inventario.PNG"
-              alt="inventario"
-            />
-            <div class="experience__info">
-              <h2 class="experience__title">Sistema de Inventario</h2>
-              <h3 class="experience__text">
-                Proyecto propio, pensado para administrar el inventario de
-                insumos de una pequeña / mediana empresa.
-              </h3>
-              <h3 class="experience__text">
-                MERN (MongoDB - Express - React - NodeJS)
-              </h3>
-              <div class="experience__description">
-                <span class="experience__repo"
-                  ><a href="https://github.com/momr01/mern-stocktaking"
-                    ><button class="experiencia__botao--repo">
-                      Repositorio
-                    </button></a
-                  ></span
-                >
-                <span class="experience__demo"
-                  ><a href="https://celadon-douhua-1c4fca.netlify.app/"
-                    ><button class="experience__botao--demo">
-                      Ver demo
-                    </button></a
-                  ></span
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="experience__box">
-            <img class="experience__img" src="./assets/proyectos/proyecto-tareas.PNG" alt="tareas" />
-            <div class="experience__info">
-              <h2 class="experience__title">App de Tareas</h2>
-              <h3 class="experience__text">
-                Proyecto propio, simple app para administrar las tareas diarias.
-              </h3>
-              <h3 class="experience__text">MERN (MongoDB - Express - React - NodeJS)</h3>
-              <div class="experience__description">
-                <span class="experience__repo"
-                  ><a href="https://github.com/momr01/mern-tasks"
-                    ><button class="experiencia__botao--repo">
-                      Repositorio
-                    </button></a
-                  ></span
-                >
-                <span class="experience__demo"
-                  ><a href="https://cozy-lokum-cfcbab.netlify.app/"
-                    ><button class="experience__botao--demo">
-                      Ver demo
-                    </button></a
-                  ></span
-                >
-              </div>
-            </div>
-          </div> -->
         </div>
       </section>
 
@@ -788,5 +436,9 @@
     <script type="module" src="./js/json-estudios-academicos.js"></script>
     <!-- <script type="module"src="./js/json-base.js"></script> -->
     <script type="module" src="./js/json-proyectos.js"></script>
+    <script type="module" src="./js/json-redes-sociales.js"></script>
+    <script type="module" src="./js/json-hard-skills.js"></script>
+    <script type="module" src="./js/json-hobbies.js"></script>
+    <script type="module" src="./js/json-cursos.js"></script>
   </body>
 </html>
