change seniority in the title of the portfolio page-change from trainee to junior

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="title__container__container">
               <h2 class="title__bio">
                 Hola! Mi nombre es Maximiliano Montaña y soy Desarrollador Full
-                Stack trainee
+                Stack junior
               </h2>
               <h3 class="title__subsection">
                 Actualmente estudio la Tecnicatura Superior en Desarrollo de
